manifests/registry.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31267
      name: docker-registry
  selector:
    app: docker-registry
    tier: docker-registry
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  labels:
    app: docker-registry
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: docker-registry-ui
  selector:
    app: docker-registry
    tier: docker-registry
  type: ClusterIP
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: tectonic
    kubernetes.io/use-port-in-redirects: 'true'
spec:
  rules:
    - host: registry.sensa.net
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry-ui
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: docker-registry
        tier: docker-registry
    spec:
      containers:
      - image: registry:latest
        name: docker-registry
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
      - name: registryui
        image: hyper/docker-registry-web
        ports:
        - containerPort: 8080
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: docker-registry-data
